# ice-cream-dataops

./: pyproject.toml
.github/workflows/: deploy.yaml
ice-cream-dataops/: build_info.test.yaml  config.prod.yaml  config.test.yaml
ice-cream-dataops/function_local_venvs/icapi_datapoints_extractor/: run_check.py
ice-cream-dataops/function_local_venvs/oee_timeseries/: run_check.py
ice-cream-dataops/modules/bootcamp/data_foundation/auth/: data_developer.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/functions/: schedules.Schedules.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/transformations/: contextualize_ts_asset.schedule.yaml  create_asset_hierarchy.schedule.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/workflows/: wf_icapi_data_pipeline.WorkFlow.yaml  wf_icapi_data_pipeline.WorkflowVersion.yaml
