[tool.poetry]
name = "cognitetoolkit"
version = "1.0.0"
description = "CogniteToolKit"
authors = ["Your Name <you@example.com>"]
license = "Cognite"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.10"
cognite-toolkit = "0.3.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
